<resources>
    <string name="app_name">MyMusicProject</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="Language">language</string>
    <string name="home">Home</string>

    <string name="anh1">Mỹ tâm</string>
    <string name="anh2">Sơn Tùng</string>
    <string name="anh3">Ngọc Sơn</string>
    <string name="anh4">Ca sĩ 4</string>
    <string name="anh5">Ca sĩ 5</string>
    <string name="anh6">Ca sĩ 6</string>
    <string name="update_my_song">Update my song</string>
    <string name="sleep_timer">Sleep timer</string>
</resources>