<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hunglee.mymusicproject.acitivity.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.hunglee.mymusicproject.acitivity.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_liked_song"
        android:name="com.hunglee.mymusicproject.acitivity.ui.liked_song.LikedSongFragment"
        android:label="@string/liked_songs"
        tools:layout="@layout/fragment_liked_song" />

    <fragment
        android:id="@+id/nav_language"
        android:name="com.hunglee.mymusicproject.acitivity.ui.language.LanguageFragment"
        android:label="@string/language"
        tools:layout="@layout/fragment_language" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.hunglee.mymusicproject.acitivity.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.hunglee.mymusicproject.acitivity.ui.contact_us.ContactUsFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/fragment_contact_us" />
</navigation>